--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,7 +6,7 @@ html
     link(rel='stylesheet', href='/bower_components/materialize/dist/css/materialize.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='https://fonts.googleapis.com/icon?family=Material+Icons')
-  body
+  body.black
 
   include templates/nav.html
 
