--- a/views/templates/room.html
+++ b/views/templates/room.html
@@ -1,4 +1,4 @@
-<div class="red darken-4">
+<div class="black darken-4">
 
 
     <div class="container">
@@ -15,14 +15,14 @@
             </div>
             <div class="col s6">
 
-                <ul class="collection with-header m0" id="userlist">
+                <ul class="collection with-header m0 hide" id="userlist">
 
                 </ul>
 
                 <div id="room-controls" class="">
                     <br>
                     <input id="room-name" type="hidden" value="hackru" />
-                    <button id="button-join" class="btn btn-ghost">Join Room</button>
+                    <button id="button-join" class="btn btn-ghost">Start Call</button>
                     <button id="button-leave" class="btn btn-ghost">Leave Room</button>
                 </div>
 
