--- a/views/templates/nav.html
+++ b/views/templates/nav.html
@@ -1,8 +1,8 @@
-<nav class="red darken-4">
+<nav class="black darken-4">
     <div class="nav-wrapper">
         <div class="container">
             <a href="/" class="brand-logo center">
-                <img src="../images/logo-ru.png" alt="RU mentoring" style="height: 58px">
+                Interview IQ
             </a>
         </div>
     </div>
